Fixes testrunner exception:  - downgrade gradle to 9.6.1 due to incompatibillities to intellij  - removed annoying warnings concerning bitbuddy shared loaded agent Added correct AGEND.md for agent to work correctly.